--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filming-location-finder",
   "version": "1.1.0",
-  "homepage": "https://aktasevren.github.io/filming-location-finder",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -34,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
