--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "homepage": ".",
   "private": true,
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -13,7 +16,9 @@
     "crawler": "^1.4.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.3",
+    "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.8.0",
+    "myapifilms-api": "^1.0.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -21,19 +26,22 @@
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.2",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "request-promise": "^4.2.6",
     "scrape-html-web": "^2.3.7",
     "scrape-it": "^6.0.1",
+    "selenium-webdriver": "^4.10.0",
     "spinners-react": "^1.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "website-scraper": "^5.3.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
